--- a/style/ticketing.css
+++ b/style/ticketing.css
@@ -15,8 +15,34 @@
   flex-direction: column;
   justify-content: space-evenly;
   width: 800px;
-  height: 650px;
+  height: auto;
+  padding-bottom: 20px;
   background: #f1f1f1;
+}
+@media (max-width: 1200px) {
+  .ticketingWrap .wrap {
+    width: 650px;
+  }
+}
+@media (max-width: 860px) {
+  .ticketingWrap .wrap {
+    width: 550px;
+  }
+}
+@media (max-width: 650px) {
+  .ticketingWrap .wrap {
+    width: 450px;
+  }
+}
+@media (max-width: 500px) {
+  .ticketingWrap .wrap {
+    width: 350px;
+  }
+}
+@media (max-width: 400px) {
+  .ticketingWrap .wrap {
+    width: 280px;
+  }
 }
 .ticketingWrap .wrap .screen {
   display: flex;
@@ -27,6 +53,35 @@
   font-size: 50px;
   font-weight: bold;
 }
+@media (max-width: 1200px) {
+  .ticketingWrap .wrap .screen {
+    height: 122px;
+    font-size: 45px;
+  }
+}
+@media (max-width: 860px) {
+  .ticketingWrap .wrap .screen {
+    height: 110px;
+    font-size: 35px;
+  }
+}
+@media (max-width: 650px) {
+  .ticketingWrap .wrap .screen {
+    height: 95px;
+  }
+}
+@media (max-width: 500px) {
+  .ticketingWrap .wrap .screen {
+    height: 70px;
+    font-size: 28px;
+  }
+}
+@media (max-width: 400px) {
+  .ticketingWrap .wrap .screen {
+    height: 60px;
+    font-size: 25px;
+  }
+}
 .ticketingWrap .wrap .seatBox {
   display: flex;
   justify-content: center;
@@ -34,17 +89,73 @@
   width: 100%;
   height: 400px;
 }
+@media (max-width: 1200px) {
+  .ticketingWrap .wrap .seatBox {
+    height: 325px;
+  }
+}
+@media (max-width: 860px) {
+  .ticketingWrap .wrap .seatBox {
+    height: 308px;
+  }
+}
+@media (max-width: 650px) {
+  .ticketingWrap .wrap .seatBox {
+    height: 280px;
+  }
+}
+@media (max-width: 500px) {
+  .ticketingWrap .wrap .seatBox {
+    height: 200px;
+  }
+}
+@media (max-width: 400px) {
+  .ticketingWrap .wrap .seatBox {
+    height: 150px;
+  }
+}
 .ticketingWrap .wrap .seatBox .seatNum,
 .ticketingWrap .wrap .seatBox .seat {
   display: flex;
   flex-direction: column;
   justify-content: center;
   row-gap: 5px;
-  width: 630px;
   height: 100%;
+}
+@media (max-width: 860px) {
+  .ticketingWrap .wrap .seatBox .seatNum,
+  .ticketingWrap .wrap .seatBox .seat {
+    row-gap: 3px;
+  }
+}
+@media (max-width: 650px) {
+  .ticketingWrap .wrap .seatBox .seatNum,
+  .ticketingWrap .wrap .seatBox .seat {
+    row-gap: 2px;
+  }
 }
 .ticketingWrap .wrap .seatBox .seatNum {
   width: 30px;
+}
+@media (max-width: 860px) {
+  .ticketingWrap .wrap .seatBox .seatNum {
+    width: 27px;
+  }
+}
+@media (max-width: 650px) {
+  .ticketingWrap .wrap .seatBox .seatNum {
+    width: 25px;
+  }
+}
+@media (max-width: 500px) {
+  .ticketingWrap .wrap .seatBox .seatNum {
+    width: 20px;
+  }
+}
+@media (max-width: 400px) {
+  .ticketingWrap .wrap .seatBox .seatNum {
+    width: 18px;
+  }
 }
 .ticketingWrap .wrap .seatBox .seatNum .newSpan {
   display: flex;
@@ -55,8 +166,58 @@
   font-size: 23px;
   font-weight: bold;
 }
+@media (max-width: 860px) {
+  .ticketingWrap .wrap .seatBox .seatNum .newSpan {
+    font-size: 20px;
+  }
+}
+@media (max-width: 650px) {
+  .ticketingWrap .wrap .seatBox .seatNum .newSpan {
+    width: 23px;
+    height: 36.25px;
+    font-size: 17px;
+  }
+}
+@media (max-width: 500px) {
+  .ticketingWrap .wrap .seatBox .seatNum .newSpan {
+    width: 19px;
+    height: 25px;
+  }
+}
+@media (max-width: 400px) {
+  .ticketingWrap .wrap .seatBox .seatNum .newSpan {
+    width: 16px;
+    height: 18.75px;
+    font-size: 13px;
+  }
+}
 .ticketingWrap .wrap .seatBox .seat {
   width: 650px;
+}
+@media (max-width: 1200px) {
+  .ticketingWrap .wrap .seatBox .seat {
+    width: 528px;
+  }
+}
+@media (max-width: 860px) {
+  .ticketingWrap .wrap .seatBox .seat {
+    width: 480px;
+  }
+}
+@media (max-width: 650px) {
+  .ticketingWrap .wrap .seatBox .seat {
+    width: 400px;
+  }
+}
+@media (max-width: 500px) {
+  .ticketingWrap .wrap .seatBox .seat {
+    width: 300px;
+  }
+}
+@media (max-width: 400px) {
+  .ticketingWrap .wrap .seatBox .seat {
+    width: 250px;
+  }
 }
 .ticketingWrap .wrap .seatBox .seat .newCol {
   display: flex;
@@ -66,6 +227,18 @@
        column-gap: 3px;
   width: 100%;
   height: 36px;
+}
+@media (max-width: 1200px) {
+  .ticketingWrap .wrap .seatBox .seat .newCol {
+    -moz-column-gap: 2px;
+         column-gap: 2px;
+  }
+}
+@media (max-width: 500px) {
+  .ticketingWrap .wrap .seatBox .seat .newCol {
+    -moz-column-gap: 1px;
+         column-gap: 1px;
+  }
 }
 .ticketingWrap .wrap .seatBox .seat .newCol .newA {
   display: flex;
@@ -77,6 +250,42 @@
   border: 1px solid #292929;
   border-radius: 5px;
   cursor: pointer;
+}
+@media (max-width: 1200px) {
+  .ticketingWrap .wrap .seatBox .seat .newCol .newA {
+    width: 27px;
+    height: 27px;
+  }
+}
+@media (max-width: 860px) {
+  .ticketingWrap .wrap .seatBox .seat .newCol .newA {
+    width: 25px;
+    height: 25px;
+    font-size: 14px;
+    border-radius: 4px;
+  }
+}
+@media (max-width: 650px) {
+  .ticketingWrap .wrap .seatBox .seat .newCol .newA {
+    width: 18px;
+    height: 21px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 500px) {
+  .ticketingWrap .wrap .seatBox .seat .newCol .newA {
+    width: 14px;
+    height: 17px;
+    border-radius: 3px;
+    font-size: 10px;
+  }
+}
+@media (max-width: 400px) {
+  .ticketingWrap .wrap .seatBox .seat .newCol .newA {
+    width: 11px;
+    height: 15px;
+    font-size: 7px;
+  }
 }
 .ticketingWrap .wrap .seatBox .seat .newCol .newA:hover {
   background: rgba(236, 125, 44, 0.7);
